Run yarn before yarn dist
Signed-off-by: Dhi Aurrahman <dio@rockybars.com>

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -17,4 +17,5 @@ jobs:
           cache: yarn
           node-version: 16.x
           cache-dependency-path: "**/yarn.lock"
+      - run: yarn
       - run: yarn dist
