Set PKG_CACHE_PATH
Signed-off-by: Dhi Aurrahman <dio@rockybars.com>

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -17,5 +17,10 @@ jobs:
           cache: yarn
           node-version: 16.x
           cache-dependency-path: "**/yarn.lock"
+      - uses: actions/cache@v2
+        with:
+          path: .cache
+          key: release-${{ runner.os }}-dist-${{ hashFiles('yarn.lock') }}
+          restore-keys: release-${{ runner.os }}-dist-
       - run: yarn
-      - run: yarn dist
+      - run: PKG_CACHE_PATH=.cache yarn dist
