--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compile": "yarn --cwd protoc-gen-ts && pkg ."
   },
   "dependencies": {
+    "@actions/github": "^5.0.0",
     "compare-versions": "^4.1.2",
     "cross-zip": "^4.0.0",
     "execa": "^6.0.0",
