--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
   },
   "pkg": {
     "targets": [
+      "node16-alpine-x64",
+      "node16-alpine-arm64",
+      "node16-linux-x64",
+      "node16-linux-arm64",
       "node16-linuxstatic-x64",
       "node16-linuxstatic-arm64",
+      "node16-linuxstatic-armv7",
       "node16-macos-x64",
       "node16-macos-arm64",
       "node16-win-x64",
